--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/userAuthDB
+MONGO_URI="mongodb+srv://admin10:ifniadmin10@cluster0.8xxmb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET=supersecret123
